--- a/views/home/equipments.handlebars
+++ b/views/home/equipments.handlebars
@@ -69,7 +69,7 @@
                             <span>Engineers</span>
                         </a>
                     </li>
-                    <li class="mt">
+                    <li class="sub-menu">
                         <a class="active" href="/showEq">
                             <i class="fa fa-cogs"></i>
                             <span>Equipments</span>
@@ -77,18 +77,52 @@
                     </li>
                     <li class="sub-menu">
                         <a href="/showPreMain">
-                            <i class="fa fa-cogs"></i>
+                            <i class="fa fa-wrench"></i>
                             <span>Preventive Maintainance</span>
                         </a>
                     </li>
                     <li class="sub-menu">
                         <a href="javascript:;">
                             <i class="fa fa-book"></i>
-                            <span>Reports</span>
+                            <span>Departments</span>
                         </a>
-                        <ul class="sub">
-                            <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="/showWorkOrders">Work Order Report</a></li>
+                        <ul style="padding-left: 0;">
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa  fa-hospital-o"></i>
+                                    <span>X</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformX">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformX">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformX">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersX">Work Order Report</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa  fa-hospital-o"></i>
+                                    <span>Y</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformY">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformY">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformY">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersY">Work Order Report</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa fa-hospital-o"></i>
+                                    <span>Z</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformZ">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformZ">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformZ">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersZ">Work Order Report</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
 
