--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -70,7 +70,7 @@
                             <span>Engineers</span>
                         </a>
                     </li>
-                    <li class="mt">
+                    <li class="sub-menu">
                         <a href="/showEq">
                             <i class="fa fa-cogs"></i>
                             <span>Equipments</span>
@@ -78,21 +78,54 @@
                     </li>
                     <li class="sub-menu">
                         <a href="/showPreMain">
-                            <i class="fa fa-cogs"></i>
+                            <i class="fa fa-wrench"></i>
                             <span>Preventive Maintainance</span>
                         </a>
                     </li>
                     <li class="sub-menu">
                         <a class="active" href="javascript:;">
                             <i class="fa fa-book"></i>
-                            <span>Reports</span>
+                            <span>Departments</span>
                         </a>
-                        <ul class="sub">
-                            <li class="active"><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li><a href="/showWorkOrders">Work Order Report</a></li>
+                        <ul style="padding-left: 0;">
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa  fa-hospital-o"></i>
+                                    <span>X</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformX">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformX">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformX">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersX">Work Order Report</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa  fa-hospital-o"></i>
+                                    <span>Y</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformY">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformY">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformY">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersY">Work Order Report</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa fa-hospital-o"></i>
+                                    <span>Z</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformZ">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformZ">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformZ">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersZ">Work Order Report</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
-
                 </ul>
                 <!-- sidebar menu end-->
             </div>
@@ -110,21 +143,15 @@
                 <div class="row mt">
                     <div class="col-lg-12">
                         <div class="form-panel">
-                            <div class="form" >
+                            <div class="form">
                                 <form class="cmxform form-horizontal style-form" id="signupForm" method="POST" action="/pre-installationform">
-                                    <div class="form-group">
-                                        <label for="hospital" class="control-label col-lg-2">Hospital's Name</label>
-                                        <div class="col-lg-10">
-                                            <input class=" form-control" id="hospital" name="hospital" type="text" required/>
-                                        </div>
-                                    </div>
                                     <div class="form-group">
                                         <label for="department" class="control-label col-lg-2">Department's Name</label>
                                         <div class="col-lg-10">
                                             <input class="form-control" id="department" name="department" type="text" required />
                                         </div>
                                     </div>
-                                    <div class="form-group" >
+                                    <div class="form-group">
                                         <label for="equipment" class="control-label col-lg-2">Equipment's Name</label>
                                         <div class="col-lg-10">
                                             <input class=" form-control" id="equipment" name="equipment" type="text" required/>
@@ -268,7 +295,7 @@
                                         <label for="date" class="control-label col-lg-2">Date</label>
                                         <div class="col-lg-3">
                                             <div data-date-viewmode="years" data-date-format="dd-mm-yyyy" data-date="01-01-2014" class="input-append date dpYears">
-                                                <input type="text" readonly="" id="date" name="date"  size="16" class="form-control" required>
+                                                <input type="text" readonly="" id="date" name="date" size="16" class="form-control" required>
                                                 <span class="input-group-btn add-on">
                             <button class="btn btn-theme" type="button"><i class="fa fa-calendar"></i></button>
                             </span>
@@ -280,7 +307,7 @@
                                     <div class="form-group">
                                         <div class="col-lg-offset-2 col-lg-10">
                                             <button class="btn btn-theme" href="/pre-installationform" type="submit">Add</button>
-                                            <a class="btn btn-theme04" type="button" >Cancel</a>
+                                            <a class="btn btn-theme04" type="button">Cancel</a>
                                         </div>
                                     </div>
                                 </form>
