--- a/views/home/pre_installationX.handlebars
+++ b/views/home/pre_installationX.handlebars
@@ -78,18 +78,52 @@
                     </li>
                     <li class="sub-menu">
                         <a href="/showPreMain">
-                            <i class="fa fa-cogs"></i>
+                            <i class="fa fa-wrench"></i>
                             <span>Preventive Maintainance</span>
                         </a>
                     </li>
                     <li class="sub-menu">
                         <a class="active" href="javascript:;">
                             <i class="fa fa-book"></i>
-                            <span>Reports</span>
+                            <span>Departments</span>
                         </a>
-                        <ul class="sub">
-                            <li><a href="/showPre-installationform">Pre-installation Report</a></li>
-                            <li class="active"><a href="/showWorkOrders">Work Order Report</a></li>
+                        <ul style="padding-left: 0;">
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa  fa-hospital-o"></i>
+                                    <span>X</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformX">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformX">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformX">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersX">Work Order Report</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa  fa-hospital-o"></i>
+                                    <span>Y</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformY">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformY">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformY">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersY">Work Order Report</a></li>
+                                </ul>
+                            </li>
+                            <li class="sub-menu">
+                                <a href="javascript:;">
+                                    <i class="fa fa-hospital-o"></i>
+                                    <span>Z</span>
+                                </a>
+                                <ul class="sub">
+                                    <li><a href="/showPre-installationformZ">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionformZ">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingformZ">Inventory Listing Report</a></li>
+                                    <li><a href="/showWorkOrdersZ">Work Order Report</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
 
@@ -104,46 +138,40 @@
         <!--main content start-->
         <section id="main-content">
             <section class="wrapper">
-                <h3><i class="fa fa-angle-right"></i> Work Order Reports</h3>
+                <h3><i class="fa fa-angle-right"></i> Pre-installation Reports For Department X</h3>
                 <div class="row mb">
                     <!-- page start-->
                     <div class="content-panel">
                         <div class="adv-table">
-                            <a type="button" class="btn btn-theme" href="/showWorkOrdersForm" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add A Work Order Report</a>
+                            <a type="button" class="btn btn-theme" href="/pre-installationform" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add A Pre-Installation Report</a>
 
                             <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="hidden-table-info">
 
                                 <thead>
                                     <tr>
                                         <th>Equipment</th>
-                                        <th>Serial Number</th>
-                                        <th>Model</th>
-                                        <th>Status</th>
-                                        <th class="hidden-phone">Description</th>
-                                        <th class="hidden-phone">Assest Type</th>
-                                        <th class="hidden-phone">Priority</th>
-                                        <th class="hidden-phone">Date</th>
+                                        <th>Date</th>
+                                        <th>Name</th>
+                                        <th class="hidden-phone">Floor</th>
+                                        <th class="hidden-phone">Room</th>
                                         <th>Manage</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                {{#each workorder}}
+                                    {{#each newform}}
                                     <tr class="gradeA">
-                                        <td>{{this.dataValues.nameEq}}</td>
-                                        <td>{{this.dataValues.serialNO}}</td>
-                                        <td>{{this.dataValues.model}}</td>
-                                        <td>{{this.dataValues.status}}</td>
-                                        <td class="  hidden-phone">{{this.dataValues.disc}}</td>
-                                        <td class=" hidden-phone">{{this.dataValues.assestType}}</td>
-                                        <td class=" hidden-phone">{{this.dataValues.prioity}}</td>
-                                        <td class=" hidden-phone">{{this.dataValues.Date}}</td>
+                                        <td>{{this.dataValues.Equipment}}</td>
+                                        <td>{{this.dataValues.Date}}</td>
+                                        <td>{{this.dataValues.Name}}</td>
+                                        <td class=" hidden-phone">{{this.dataValues.Floor}}</td>
+                                        <td class=" hidden-phone">{{this.dataValues.Room}}</td>
 
                                         <td class="center">
-                                            <a href="edit_workorder.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a>
-                                            <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
+                                            {{!-- <a href="edit_preinstallation.html" class="btn btn-primary btn-xs"><i class="fa fa-pencil"></i></a> --}}
+                                            <button class="btn btn-danger btn-xs"  data-toggle="modal" data-target="#delete"><i class="fa fa-trash-o"></i></button>
                                         </td>
                                     </tr>
-                                {{/each}}
+                                {{/each}}    
                                 </tbody>
                             </table>
                         </div>
@@ -201,18 +229,103 @@
         /* Formating function for row details */
         function fnFormatDetails(oTable, nTr) {
             var aData = oTable.fnGetData(nTr);
-            var sOut = '<table cellpadding="5" cellspacing="0" border="0" >';
+            var sOut = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;margin:auto">';
             sOut += "<tr><td>Equipment's Name:</td><td>" + aData[1] + '</td></tr>';
-            sOut += '<tr><td>Serial Number:</td><td>' + aData[2] + '</td></tr>';
-            sOut += '<tr><td>Model:</td><td>' + aData[3] + '</td></tr>';
-            sOut += "<tr><td>Status: </td><td>" + aData[4] + '</td> </tr>';
-            sOut += "<tr><td>Description: </td><td>" + aData[5] + '</td> </tr>';
-            sOut += "<tr><td>Assest Type: </td><td>" + aData[6] + '</td> </tr>';
-            sOut += "<tr><td>Priority: </td><td>" + aData[7] + '</td> </tr>';
-            sOut += "<tr><td>Date: </td><td>" + aData[8] + '</td> </tr>';
-
+            sOut += '<tr><td>Date:</td><td>' + aData[2] + '</td></tr>';
+            sOut += '<tr><td>The Person Who Filled The Form:</td><td>' + aData[3] + '</td></tr>';
+            sOut += "<tr><td>Floor's Number: </td><td>" + aData[4] + '</td> </tr>';
+            sOut += "<tr><td>Room's Number: </td><td>" + aData[5] + '</td> </tr>';
             sOut += '</table>';
+            sOut += `<div class="table">
 
+<div class="row head">
+    <div class="cell">
+        Task Description
+    </div>
+    <div class="cell">
+        Check
+    </div>
+    <div class="cell pl-5">
+        Responsibility of (Name)
+    </div>
+    <div class="cell pl-5">
+        Comments
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Pre-Installation Form Copied
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Required Tools Available
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+<div class="row notheader">
+    <div class="cell">
+        Required Supplies Available
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Site Can Be Locked After Hours
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>
+
+<div class="row notheader">
+    <div class="cell">
+        Lock Keys Assigned To Personnel
+    </div>
+    <div class="cell">
+        <span>` + "True" + `</span>
+    </div>
+    <div class="cell">
+        <span>` + "Name" + `</span>
+    </div>
+    <div class="cell pl-3">
+        <span>` + "Comment" + `</span>
+    </div>
+</div>`
 
             return sOut;
         }
