--- a/views/home/pre_installationY.handlebars
+++ b/views/home/pre_installationY.handlebars
@@ -84,46 +84,55 @@
                     </li>
                     <li class="sub-menu">
                         <a class="active" href="javascript:;">
-                            <i class="fa fa-book"></i>
+                            <i class="fa  fa-hospital-o"></i>
                             <span>Departments</span>
                         </a>
                         <ul style="padding-left: 0;">
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <i class="fa  fa-hospital-o"></i>
                                     <span>X</span>
                                 </a>
                                 <ul class="sub">
                                     <li><a href="/showPre-installationformX">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionformX">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingformX">Inventory Listing Report</a></li>
+                                    <li><a href="/showDailyInspectionX">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingX">Inventory Listing Report</a></li>
                                     <li><a href="/showWorkOrdersX">Work Order Report</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
-                                <a href="javascript:;">
-                                    <i class="fa  fa-hospital-o"></i>
+                                <a class="active" href="javascript:;">
                                     <span>Y</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationformY">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionformY">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingformY">Inventory Listing Report</a></li>
+                                    <li class="active"><a href="/showPre-installationY">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionY">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingY">Inventory Listing Report</a></li>
                                     <li><a href="/showWorkOrdersY">Work Order Report</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
                                 <a href="javascript:;">
-                                    <i class="fa fa-hospital-o"></i>
                                     <span>Z</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationformZ">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionformZ">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingformZ">Inventory Listing Report</a></li>
+                                    <li><a href="/showPre-installationZ">Pre-installation Report</a></li>
+                                    <li><a href="/showDailyInspectionZ">Daily Inspection Report</a></li>
+                                    <li><a href="/showInventoryListingZ">Inventory Listing Report</a></li>
                                     <li><a href="/showWorkOrdersZ">Work Order Report</a></li>
                                 </ul>
                             </li>
+                        </ul>
+                    </li>
+                    <li class="sub-menu">
+                        <a href="javascript:;">
+                            <i class="fa fa-book"></i>
+                            <span>Add Reports</span>
+                        </a>
+                        <ul class="sub">
+                            <li><a href="/pre-installationform">Add Pre-installation Report</a></li>
+                            <li><a href="/showDailyInspectionForm">Add Daily Inspection Report</a></li>
+                            <li><a href="/showInventoryListingForm">Add Inventory Listing Report</a></li>
+                            <li><a href="/showWorkOrdersForm">Add Work Order Report</a></li>
                         </ul>
                     </li>
 
@@ -143,7 +152,6 @@
                     <!-- page start-->
                     <div class="content-panel">
                         <div class="adv-table">
-                            <a type="button" class="btn btn-theme" href="/pre-installationform" style="float: right!important;margin: 20px 20px!important;"><i class="fa  fa-plus-square" style="margin-right: 5px!important;"></i> Add A Pre-Installation Report</a>
 
                             <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered" id="hidden-table-info">
 
