--- a/views/add_preinstallation.html
+++ b/views/add_preinstallation.html
@@ -93,10 +93,10 @@
                                     <span>X</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationformX">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionX">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingX">Inventory Listing Report</a></li>
-                                    <li><a href="/showWorkOrdersX">Work Order Report</a></li>
+                                    <li><a href="/showPre-installationformX">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionX">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingX">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersX">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -104,10 +104,10 @@
                                     <span>Y</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationY">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionY">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingY">Inventory Listing Report</a></li>
-                                    <li><a href="/showWorkOrdersY">Work Order Report</a></li>
+                                    <li><a href="/showPre-installationY">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionY">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingY">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersY">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -115,10 +115,10 @@
                                     <span>Z</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationZ">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionZ">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingZ">Inventory Listing Report</a></li>
-                                    <li><a href="/showWorkOrdersZ">Work Order Report</a></li>
+                                    <li><a href="/showPre-installationZ">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionZ">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingZ">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersZ">Work Order Reports</a></li>
                                 </ul>
                             </li>
                         </ul>
