--- a/views/management.html
+++ b/views/management.html
@@ -85,16 +85,16 @@
                             <i class="fa  fa-hospital-o"></i>
                             <span>Departments</span>
                         </a>
-                        <ul style="padding-left: 0;">
+                        <ul style="padding-left: 0px;">
                             <li class="sub-menu">
                                 <a href="javascript:;">
                                     <span>X</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationformX">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionX">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingX">Inventory Listing Report</a></li>
-                                    <li><a href="/showWorkOrdersX">Work Order Report</a></li>
+                                    <li><a href="/showPre-installationformX">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionX">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingX">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersX">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -102,10 +102,10 @@
                                     <span>Y</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationY">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionY">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingY">Inventory Listing Report</a></li>
-                                    <li><a href="/showWorkOrdersY">Work Order Report</a></li>
+                                    <li><a href="/showPre-installationY">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionY">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingY">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersY">Work Order Reports</a></li>
                                 </ul>
                             </li>
                             <li class="sub-menu">
@@ -113,10 +113,10 @@
                                     <span>Z</span>
                                 </a>
                                 <ul class="sub">
-                                    <li><a href="/showPre-installationZ">Pre-installation Report</a></li>
-                                    <li><a href="/showDailyInspectionZ">Daily Inspection Report</a></li>
-                                    <li><a href="/showInventoryListingZ">Inventory Listing Report</a></li>
-                                    <li><a href="/showWorkOrdersZ">Work Order Report</a></li>
+                                    <li><a href="/showPre-installationZ">Pre-installation Reports</a></li>
+                                    <li><a href="/showDailyInspectionZ">Daily Inspection Reports</a></li>
+                                    <li><a href="/showInventoryListingZ">Inventory Listing Reports</a></li>
+                                    <li><a href="/showWorkOrdersZ">Work Order Reports</a></li>
                                 </ul>
                             </li>
                         </ul>
